# app/Models/AddressUser.php
@@ -9,4 +9,5 @@ class AddressUser extends Model
 {
     use HasFactory;
     public $timestamps = false;
+    protected $fillable = ['userID', 'phone', 'city', 'country', 'province', 'address', 'postcode'];
 }
